--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,15 @@
 /rethdata
 monitoring/data-grafana/
 monitoring/data-prometheus/
+
+# Foundry build artifacts
+example/cache/
+example/out/
+
+# Keep broadcast files except local dev chains and dry runs
+example/broadcast/*/31337/
+example/broadcast/**/dry-run/
+
+# Docs and env
+example/docs/
+.example.env
