--- a/.github/workflows/test_foundry.yml
+++ b/.github/workflows/test_foundry.yml
@@ -9,31 +9,37 @@ env:
   FOUNDRY_PROFILE: ci
 
 jobs:
-    check:
-      name: Foundry project
-      runs-on: ubuntu-latest
-      steps:
-        - uses: actions/checkout@v4
-          with:
-            submodules: recursive
+  check:
+    name: Foundry project
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          submodules: recursive
 
-        - name: Install Foundry
-          uses: foundry-rs/foundry-toolchain@v1
+      - name: Install Foundry
+        uses: foundry-rs/foundry-toolchain@v1
 
-        - name: Show Forge version
-          run: forge --version
+      - name: Show Forge version
+        run: forge --version
 
-        - name: Run Forge fmt
-          run: forge fmt --check
-          working-directory: ./example
-          id: fmt
+      - name: Install dependencies
+        run: |
+          forge install openzeppelin/openzeppelin-contracts
+          echo '@openzeppelin/=lib/openzeppelin-contracts/' > remappings.txt
+        working-directory: ./example
 
-        - name: Run Forge build
-          run: forge build --sizes
-          working-directory: ./example
-          id: build
+      - name: Run Forge fmt
+        run: forge fmt --check
+        working-directory: ./example
+        id: fmt
 
-        - name: Run Forge tests
-          run: forge test -vvv
-          working-directory: ./example
-          id: test
+      - name: Run Forge build
+        run: forge build --sizes
+        working-directory: ./example
+        id: build
+
+      - name: Run Forge tests
+        run: forge test -vvv
+        working-directory: ./example
+        id: test
