--- a/.github/workflows/foundry.yml
+++ b/.github/workflows/foundry.yml
@@ -1,12 +1,22 @@
-name: CI
+name: Foundry
 
 on:
   push:
+    branches: ['main']
   pull_request:
+    branches: ['main']
   workflow_dispatch:
+  # Cancel previous runs of this workflow when a new commit is added to the PR, branch or tag
+  concurrency:
+    group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+    cancel-in-progress: true
 
 env:
   FOUNDRY_PROFILE: ci
+
+defaults:
+    run:
+      working-directory: ./example
 
 jobs:
   check:
@@ -26,20 +36,12 @@ jobs:
       - name: Install dependencies
         run: |
           forge install openzeppelin/openzeppelin-contracts
-          echo '@openzeppelin/=lib/openzeppelin-contracts/' > remappings.txt
-        working-directory: ./example
 
       - name: Run Forge fmt
         run: forge fmt --check
-        working-directory: ./example
-        id: fmt
 
       - name: Run Forge build
         run: forge build --sizes
-        working-directory: ./example
-        id: build
 
       - name: Run Forge tests
         run: forge test -vvv
-        working-directory: ./example
-        id: test
