--- a/.github/workflows/foundry.yml
+++ b/.github/workflows/foundry.yml
@@ -4,7 +4,7 @@ on:
   merge_group:
   pull_request:
   push:
-    branches: main
+    branches: [main]
 
 # If new code is pushed to a PR branch, then cancel in progress workflows for that PR.
 # Ensures that we don't waste CI time, and returns results quicker.
@@ -15,28 +15,26 @@ concurrency:
 env:
   FOUNDRY_PROFILE: ci
 
-defaults:
-    run:
-      working-directory: ./example
-
 jobs:
-  check:
-    name: Foundry project
+  foundry-example:
+    name: Build and Test example Foundry project
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+    defaults:
+      run:
+        working-directory: ./example
     steps:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
+          persist-credentials: false
 
       - name: Install Foundry
         uses: foundry-rs/foundry-toolchain@v1
 
       - name: Show Forge version
         run: forge --version
-
-      - name: Install dependencies
-        run: |
-          forge install openzeppelin/openzeppelin-contracts
 
       - name: Run Forge fmt
         run: forge fmt --check
