--- a/example/foundry.toml
+++ b/example/foundry.toml
@@ -4,6 +4,4 @@ out = "out"
 libs = ["lib"]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
-remappings = [
-      "@openzeppelin/=lib/openzeppelin-contracts/",
-  ]
+remappings = ["@openzeppelin/=lib/openzeppelin-contracts/"]
