--- a/.github/workflows/foundry.yml
+++ b/.github/workflows/foundry.yml
@@ -23,7 +23,7 @@ jobs:
       contents: read
     defaults:
       run:
-        working-directory: ./example
+        working-directory: ./solidity
     steps:
       - uses: actions/checkout@v4
         with:
