feat(solidity): Smart contract for minting and burning on top of Malachite+Reth (#8)
* Added simple minting/burning example smart contract

* Updated example README.md

* Removed git from example

* Fix formatting

* Added dependencies to test_foundry.yml

* Implemented suggested changes

* Fixed foundry.yml

* add git submodules

* review

* taplo fmt

* rename example dir to solidity

* Updated README.md

---------

Co-authored-by: Ranadeep Biswas <mail@rnbguy.at>

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,16 @@
 /rethdata
 monitoring/data-grafana/
 monitoring/data-prometheus/
+
+# Foundry build artifacts
+example/cache/
+example/out/
+
+# Keep broadcast files except local dev chains and dry runs
+example/broadcast/*/31337/
+example/broadcast/**/dry-run/
+
+# Docs and env
+example/docs/
+.env
+.example.env
