--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -36,6 +36,7 @@ alloy-network          = "0.11.1"
 alloy-primitives       = { version = "0.8.21", features = ["getrandom"] }
 alloy-rlp              = "0.3"
 alloy-rpc-types        = { workspace = true }
+alloy-sol-types        = { workspace = true }
 alloy-rpc-types-engine = { workspace = true }
 alloy-rpc-types-txpool = "0.11.1"
 alloy-signer           = "0.11.1"
