--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,8 +34,10 @@ malachitebft-eth-cli    = { version = "0.0.1", path = "cli" }
 malachitebft-eth-engine = { version = "0.0.1", path = "engine" }
 malachitebft-eth-types  = { version = "0.0.1", path = "types" }
 
+alloy-primitives       = { version = "0.8.21", features = ["getrandom"] }
 alloy-consensus        = { version = "0.11.1", default-features = false }
 alloy-rpc-types        = { version = "0.11.1", features = ["eth"], default-features = false }
+alloy-contract         = { version = "0.11.1", default-features = false }
 alloy-sol-types        = { version = "0.8.15", features = ["json"], default-features = false }
 alloy-rpc-types-eth    = { version = "0.11.1", default-features = false }
 alloy-rpc-types-engine = { version = "0.11.1", features = ["ssz"], default-features = false }
