--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -33,7 +33,7 @@ malachitebft-eth-types = { workspace = true }
 alloy-consensus        = { workspace = true }
 alloy-genesis          = "0.11.1"
 alloy-network          = "0.11.1"
-alloy-primitives       = { version = "0.8.21", features = ["getrandom"] }
+alloy-primitives       = { workspace = true }
 alloy-rlp              = "0.3"
 alloy-rpc-types        = { workspace = true }
 alloy-sol-types        = { workspace = true }
