--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,6 +31,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          submodules: recursive
       - name: Install Protoc
         uses: arduino/setup-protoc@v3
         with:
@@ -39,6 +41,11 @@ jobs:
         uses: actions-rust-lang/setup-rust-toolchain@v1
       - name: Install cargo-nextest
         uses: taiki-e/install-action@cargo-nextest
+      - name: Install Foundry
+        uses: foundry-rs/foundry-toolchain@v1
+      - name: Run Forge build
+        run: forge build
+        working-directory: ./solidity
       - name: Run tests
         run: |
           cargo nextest run \
