--- a/solidity/foundry.toml
+++ b/solidity/foundry.toml
@@ -1,7 +1,19 @@
 [profile.default]
 src = "src"
 out = "out"
-libs = ["lib"]
+libs = [ "lib" ]
+remappings = [
+  "@openzeppelin/contracts/=lib/openzeppelin-contracts/contracts/",
+]
+
+# Enable optimizations
+optimizer      = true
+optimizer_runs = 200
+
+# Enable FFI for deployment scripts
+ffi = true
+
+# Gas reporting
+gas_reports = [ "*" ]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
-remappings = ["@openzeppelin/=lib/openzeppelin-contracts/"]
