--- a/.gitignore
+++ b/.gitignore
@@ -3,14 +3,7 @@
 /rethdata
 monitoring/data-grafana/
 monitoring/data-prometheus/
-
-# Foundry build artifacts
-example/cache/
-example/out/
-
-# Keep broadcast files except local dev chains and dry runs
-example/broadcast/*/31337/
-example/broadcast/**/dry-run/
+assets
 
 # Docs and env
 example/docs/
