change ci job name

--- a/.github/workflows/malaketh.yml
+++ b/.github/workflows/malaketh.yml
@@ -26,7 +26,7 @@ env:
 
 jobs:
   malaketh:
-    name: Unit Tests
+    name: Malaketh Block Production
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
