--- a/.github/workflows/malaketh.yml
+++ b/.github/workflows/malaketh.yml
@@ -49,8 +49,9 @@ jobs:
       - name: Run malaketh
         run: |
           cargo build
-          cargo run --bin malachitebft-eth-utils genesis
+          cargo run --bin malachitebft-eth-app -- testnet --nodes 3 --home nodes --config .testnet/config
+          ls nodes/*/config/priv_validator_key.json | xargs -I{} cargo run --bin malachitebft-eth-app show-pubkey {} > nodes/validator_public_keys.txt
+          cargo run --bin malachitebft-eth-utils genesis --public-keys-file ./nodes/validator_public_keys.txt
           docker compose up -d
           ./scripts/add_peers.sh
-          cargo run --bin malachitebft-eth-app -- testnet --nodes 3 --home nodes --config .testnet/config --deterministic
           bash scripts/spawn.bash --nodes 3 --home nodes --no-wait
