feat: Validator management via solidity contract (#17)
* impl ValidatorSet contract

* add genesis ValidatorSet in reth

* update ValidatorSet when Block is decided

* forge fmt

* refactor ValidatorSet contract at genesis

* simplify solidity types

* forge fmt

* add solidity tests

* forge build before rust

* forge build before clippy

* fix working directory for forge

* fix clippy lint

* solidity project gitignore

* wait nodes to be ready

* deterministic validator keys

* fix genesis contract bootstrap

* query validator set after block is produced

* update git submodules

* update .gitignore

* correct forge dep commit

* fix storage layout of solidity contract

* rm dbg statements

* update solidity contract

* run malaketh on CI

* change ci job name

* wait longer as needed

* correct exit code in case of failure

* genesis ValidatorSet from contract

* cargo fmt

* add argument

* format action file

* refactor private key gen

* tool to update validator set

* reuse get_validator_set code

* fix clippy lints

* nits

* use macos compatible command

* rm redundant error variants

* refactor

* simplify validator manager contract

* validator manager script

* rm load binary

* genesis.json from validator keys

* rename function avoid name collision

* eyre over anyhow

* use proper name

* rename to genesis_output_file

* use expect over unwrap

* rename unused field

* use debug over println

* rm redundant dep

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -46,6 +46,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          submodules: recursive
       - name: Install Protoc
         uses: arduino/setup-protoc@v3
         with:
@@ -54,6 +56,11 @@ jobs:
         uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
           components: clippy
+      - name: Install Foundry
+        uses: foundry-rs/foundry-toolchain@v1
+      - name: Run Forge build
+        working-directory: ./solidity
+        run: forge build
       - name: Run clippy
         uses: auguwu/clippy-action@1.4.0
         with:
