--- a/.github/workflows/malaketh.yml
+++ b/.github/workflows/malaketh.yml
@@ -49,7 +49,8 @@ jobs:
       - name: Run malaketh
         run: |
           cargo build
-          cargo run --bin malachitebft-eth-app -- testnet --nodes 3 --home nodes --config .testnet/config
+          ./scripts/generate_testnet_config.sh 3
+          cargo run --bin malachitebft-eth-app -- testnet --home nodes --testnet-config ${HOME}/.testnet/testnet_config.toml
           ls nodes/*/config/priv_validator_key.json | xargs -I{} cargo run --bin malachitebft-eth-app show-pubkey {} > nodes/validator_public_keys.txt
           cargo run --bin malachitebft-eth-utils genesis --public-keys-file ./nodes/validator_public_keys.txt
           docker compose up -d
