--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -41,6 +41,7 @@ serde_json.workspace = true
 sha3.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
+toml.workspace = true
 tracing.workspace = true
 url.workspace = true
 
