--- a/foundry.toml
+++ b/foundry.toml
@@ -1,9 +1,11 @@
 [profile.default]
+root = "solidity"
 src = "src"
 out = "out"
 libs = [ "lib" ]
 remappings = [
   "@openzeppelin/contracts/=lib/openzeppelin-contracts/contracts/",
+  "forge-std/=lib/forge-std/src/",
 ]
 
 # Enable optimizations
