--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -16,6 +16,7 @@ color-eyre = { workspace = true }
 tokio = { version = "1", features = ["full"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+serde_yaml = "0.9.33"
 tracing = "0.1"
 tracing-subscriber = "0.3"
 async-trait = "0.1"
