doc comments for malaketh config

--- a/config.example.toml
+++ b/config.example.toml
@@ -4,15 +4,20 @@
 # Moniker prefix used when creating the Malachite configuration file
 moniker = "test-0"
 
-# RPC endpoint for Etherium
+# RPC endpoint for Ethereum execution client
 execution_authrpc_address = "http://localhost:8545"
 
-# RPC endpoint for Engine
+# RPC endpoint for Ethereum Engine API
 engine_authrpc_address = "http://localhost:8551"
 
 # Path of the JWT token file
 jwt_token_path = "./assets/jwtsecret"
 
+# Maximum time to wait for execution client to sync before crashing
 sync_timeout_ms = 10000
+
+# Initial retry delay for execution client sync validation
 sync_initial_delay_ms = 100
+
+# Type of execution layer node (archive, full, or custom)
 el_node_type = "archive"
