--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -34,6 +34,7 @@ jobs:
       id-token: write
     env:
       PUSH_IMAGE: ${{ github.event_name != 'pull_request' || github.event.pull_request.head.repo.fork == false }}
+      BUILD_PLATFORMS: ${{ github.ref == 'refs/heads/main' && 'linux/amd64,linux/arm64' || 'linux/amd64' }}
     steps:
       - name: Check out the repo
         uses: actions/checkout@v5
@@ -73,7 +74,7 @@ jobs:
         with:
           context: .
           file: Dockerfile
-          platforms: ${{ env.PUSH_IMAGE == 'true' && 'linux/amd64,linux/arm64' || 'linux/amd64' }}
+          platforms: ${{ env.BUILD_PLATFORMS }}
           push: ${{ env.PUSH_IMAGE == 'true' }}
           load: ${{ env.PUSH_IMAGE != 'true' }}
           tags: ${{ steps.docker-meta.outputs.tags }}
