--- a/compose.yaml
+++ b/compose.yaml
@@ -24,7 +24,7 @@ services:
       - "--http.port=8545"
       - "--http.addr=0.0.0.0"
       - "--http.corsdomain=*"
-      - "--http.api=admin,net,eth,web3,debug,txpool,trace"
+      - "--http.api=admin,net,eth,web3,debug,txpool,trace,ots"
       - "--authrpc.addr=0.0.0.0"
       - "--authrpc.port=8551"
       - "--authrpc.jwtsecret=/root/assets/jwtsecret"
@@ -59,7 +59,7 @@ services:
       - "--http.port=18545"
       - "--http.addr=0.0.0.0"
       - "--http.corsdomain=*"
-      - "--http.api=admin,net,eth,web3,debug,txpool,trace"
+      - "--http.api=admin,net,eth,web3,debug,txpool,trace,ots"
       - "--authrpc.addr=0.0.0.0"
       - "--authrpc.port=18551"
       - "--authrpc.jwtsecret=/root/assets/jwtsecret"
@@ -94,7 +94,7 @@ services:
       - "--http.port=28545"
       - "--http.addr=0.0.0.0"
       - "--http.corsdomain=*"
-      - "--http.api=admin,net,eth,web3,debug,txpool,trace"
+      - "--http.api=admin,net,eth,web3,debug,txpool,trace,ots"
       - "--authrpc.addr=0.0.0.0"
       - "--authrpc.port=28551"
       - "--authrpc.jwtsecret=/root/assets/jwtsecret"
@@ -129,7 +129,7 @@ services:
       - "--http.port=38545"
       - "--http.addr=0.0.0.0"
       - "--http.corsdomain=*"
-      - "--http.api=admin,net,eth,web3,debug,txpool,trace"
+      - "--http.api=admin,net,eth,web3,debug,txpool,trace,ots"
       - "--authrpc.addr=0.0.0.0"
       - "--authrpc.port=38551"
       - "--authrpc.jwtsecret=/root/assets/jwtsecret"
