--- a/compose.yaml
+++ b/compose.yaml
@@ -174,6 +174,6 @@ services:
     image: otterscan/otterscan:develop
     depends_on:
       - reth0
-    network_mode: host
+    network_mode: host # frontend is at http://127.0.0.1:80
     environment:
       ERIGON_URL: "http://127.0.0.1:8545"
