update cargo deps

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -70,6 +70,7 @@ tracing            = "0.1.41"
 tracing-appender   = "0.2.3"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 url                = "2"
+k256              = { version = "0.13" }
 
 [workspace.dependencies.malachitebft-app]
 package = "informalsystems-malachitebft-app"
