--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -17,8 +17,6 @@ malachitebft-eth-engine.workspace = true
 malachitebft-app-channel.workspace = true
 malachitebft-proto.workspace = true
 
-ed25519-consensus = "2.1.0"
-
 alloy-provider = { version = "0.11.1" }
 alloy-primitives = { workspace = true }
 alloy-contract = { workspace = true }
@@ -27,6 +25,9 @@ alloy-consensus = { workspace = true }
 alloy-rpc-types-eth = { workspace = true }
 alloy-rpc-types-engine = { workspace = true }
 ethereum_ssz = "0.8"
+
+libp2p-identity = { version = "0.2", features = ["secp256k1"] }
+k256.workspace = true
 
 hex.workspace = true
 async-trait.workspace = true
