--- a/taplo.toml
+++ b/taplo.toml
@@ -1,4 +1,4 @@
-include = [ "taplo.toml", "**/Cargo.toml", "foundry.toml" ]
+include = [ "taplo.toml", "**/Cargo.toml", "**/foundry.toml" ]
 
 [formatting]
 align_entries       = true
