--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -36,9 +36,19 @@ jobs:
       - name: Setup Rust toolchain
         uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
+          toolchain: nightly
           components: rustfmt
       - name: Check formatting
         uses: actions-rust-lang/rustfmt@v1
+
+      - name: Install Taplo
+        uses: taiki-e/cache-cargo-install-action@v2
+        with:
+          tool: taplo-cli
+          locked: true
+
+      - name: Check TOML formatting
+        run: taplo fmt --check
 
   clippy:
     name: Clippy
