--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -1,30 +1,30 @@
 [package]
-name = "malachitebft-eth-cli"
-version.workspace = true
-edition.workspace = true
-repository.workspace = true
-license.workspace = true
-publish.workspace = true
+name       = "malachitebft-eth-cli"
+version    = { workspace = true }
+edition    = { workspace = true }
+repository = { workspace = true }
+license    = { workspace = true }
+publish    = { workspace = true }
 
 [lints]
 workspace = true
 
 [dependencies]
-malachitebft-core-types.workspace = true
-malachitebft-metrics.workspace = true
-malachitebft-config.workspace = true
-malachitebft-app.workspace = true
-malachitebft-signing-ed25519 = { workspace = true, features = ["serde"] }
+malachitebft-core-types = { workspace = true }
+malachitebft-eth-types  = { workspace = true }
+malachitebft-metrics    = { workspace = true }
+malachitebft-config     = { workspace = true }
+malachitebft-app        = { workspace = true }
 
 axum = { workspace = true }
 bytesize = { workspace = true }
-clap = { workspace = true, features = ["derive", "env"] }
+clap = { workspace = true, features = [ "derive", "env" ] }
 color-eyre = { workspace = true }
 config = { workspace = true }
 directories = { workspace = true }
 hex = "0.4"
 itertools = { workspace = true }
-tokio = { workspace = true, features = ["full"] }
+tokio = { workspace = true, features = [ "full" ] }
 thiserror = { workspace = true }
 tracing = { workspace = true }
 tracing-appender = { workspace = true }
