--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -45,3 +45,4 @@ tokio        = { workspace = true }
 toml         = { workspace = true }
 tracing      = { workspace = true }
 url          = { workspace = true }
+moka         = { version = "0.12", features = ["future"] }
