update app name to emerald

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ overflow-checks = true
 unexpected_cfgs = { level = "warn", check-cfg = [ 'cfg(coverage_nightly)' ] }
 
 [workspace.dependencies]
-malachitebft-eth-app    = { version = "0.0.1", path = "app" }
+emerald    = { version = "0.0.1", path = "app" }
 malachitebft-eth-cli    = { version = "0.0.1", path = "cli" }
 malachitebft-eth-engine = { version = "0.0.1", path = "engine" }
 malachitebft-eth-types  = { version = "0.0.1", path = "types" }
