--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name         = "malachitebft-eth-utils"
+name         = "emerald-utils"
 version      = { workspace = true }
 edition      = { workspace = true }
 repository   = { workspace = true }
