--- a/.github/workflows/malaketh.yml
+++ b/.github/workflows/malaketh.yml
@@ -49,9 +49,9 @@ jobs:
         run: |
           cargo build
           ./scripts/generate_testnet_config.sh --nodes 3 --testnet-config-dir .testnet
-          cargo run --bin malachitebft-eth-app -- testnet --home nodes --testnet-config .testnet/testnet_config.toml
-          ls nodes/*/config/priv_validator_key.json | xargs -I{} cargo run --bin malachitebft-eth-app show-pubkey {} > nodes/validator_public_keys.txt
-          cargo run --bin malachitebft-eth-utils genesis --public-keys-file ./nodes/validator_public_keys.txt
+          cargo run --bin emerald -- testnet --home nodes --testnet-config .testnet/testnet_config.toml
+          ls nodes/*/config/priv_validator_key.json | xargs -I{} cargo run --bin emerald show-pubkey {} > nodes/validator_public_keys.txt
+          cargo run --bin emerald-utils genesis --public-keys-file ./nodes/validator_public_keys.txt
           docker compose up -d
           ./scripts/add_peers.sh
           bash scripts/spawn.bash --nodes 3 --home nodes --no-delay --no-wait
