--- a/taplo.toml
+++ b/taplo.toml
@@ -1,4 +1,5 @@
 include = [ "taplo.toml", "**/Cargo.toml", "**/foundry.toml" ]
+exclude = [ "solidity/lib/**" ]
 
 [formatting]
 align_entries       = true
