refactor validator manager contract

--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -58,3 +58,4 @@ alloy-signer-local    = "0.11.1"
 tempfile              = "3"
 alloy-contract        = "0.11.1"
 alloy-node-bindings   = "0.11.1"
+test-log              = "0.2"
