--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -44,6 +44,8 @@ alloy-rpc-types-txpool = "0.11.1"
 alloy-signer           = "0.11.1"
 alloy-signer-local     = { version = "0.11.1", features = [ "keystore", "mnemonic" ] }
 alloy-transport-http   = { version = "0.11.1", features = [ "jwt-auth" ] }
+alloy-json-abi         = { workspace = true }
+alloy-dyn-abi          = { workspace = true }
 
 jsonrpsee-core        = { version = "0.25.0" }
 jsonrpsee-http-client = { version = "0.25.0" }
