--- a/scripts/reth_pruned.toml
+++ b/scripts/reth_pruned.toml
@@ -24,7 +24,7 @@ max_cumulative_gas = 1500000000000
 max_duration = "10m"
 
 [stages.prune]
-commit_threshold = 1000
+commit_threshold = 100
 
 [stages.account_hashing]
 clean_threshold = 500000
@@ -53,22 +53,25 @@ file_size = 524288000
 [prune]
 # Minimum pruning interval measured in blocks
 block_interval = 5
- 
+commit_threshold = 10
+
 [prune.segments]
-# Sender Recovery pruning configuration
-sender_recovery = { distance = 10_064 } # Prune all transaction senders before the block `head-100000`, i.e. keep transaction senders for the last 100001 blocks
+ # Sender Recovery pruning configuration
+sender_recovery = { distance = 64 } # Prune all transaction senders before the block `head-100000`, i.e. keep transaction senders for the last 100001 blocks
  
 # Transaction Lookup pruning configuration
 transaction_lookup = "full" # Prune all TxNumber => TxHash mappings
  
 # Receipts pruning configuration. This setting overrides `receipts_log_filter`.
-receipts = { before = 10064 } # Prune all receipts from transactions before the block 1920000, i.e. keep receipts from the block 1920000
+receipts = { before = 64 } # Prune all receipts from transactions before the block 1920000, i.e. keep receipts from the block 1920000
  
 # Account History pruning configuration
-account_history = { distance = 10_064 } # Prune all historical account states before the block `head-100000`
+account_history = { distance = 64 } # Prune all historical account states before the block `head-100000`
  
 # Storage History pruning configuration
-storage_history = { distance = 10_064 } # Prune all historical storage states before the block `head-100000`
+storage_history = { distance = 64 } # Prune all historical storage states before the block `head-100000`
+
+
 
 [peers]
 refill_slots_interval = "5s"
